...
        }
    }
}

@Composable
fun GroupUI(groupName: String?){
    Column() {Text("Group UI")
        OutlinedTextField(value = groupName.toString(),
            onValueChange = {groupAlter()},
            label = { Text(text = "Group Name", fontFamily = FontFamily.Monospace, color = MaterialTheme.colorScheme.secondary) },
            singleLine = true,)
    }
}

@Composable
fun TimeUI(times: String?){
    Column() {Text("Time UI")
        //This info will get converted into the time slices object eventually with
        //the number being the hour multiplied by the day.
            OutlinedTextField(value = times.toString(),
                onValueChange = {groupAlter()},
                label = { Text(text = "Time Slices", fontFamily = FontFamily.Monospace, color = MaterialTheme.colorScheme.secondary) },
                singleLine = true,)
...
